syntax = "proto3";
// This is a legacy package that requires additional migration logic
// in order to use the correct package. Decision made to use legacy package path
// until clear steps for migration logic and the unknowns for state breaking are
// investigated for changing proto package.
package osmosis.concentratedliquidity.v1beta1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/osmosis-labs/osmosis/v14/x/concentrated-liquidity/model";

message Pool {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;
  option (cosmos_proto.implements_interface) = "PoolI";

  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];
  uint64 id = 2;

  // Amount of total liquidity
  string liquidity = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"liquidity\"",
    (gogoproto.nullable) = false
  ];

  string token0 = 4;
  string token1 = 5;

  string current_sqrt_price = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"spot_price\"",
    (gogoproto.nullable) = false
  ];
  string current_tick = 7 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"current_tick\"",
    (gogoproto.nullable) = false
  ];
  // tick_spacing must be one of the authorized_tick_spacing values set in the
  // concentrated-liquidity parameters
  uint64 tick_spacing = 8 [ (gogoproto.moretags) = "yaml:\"tick_spacing\"" ];
  string precision_factor_at_price_one = 9 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"precision_factor_at_price_one\"",
    (gogoproto.nullable) = false
  ];

  // swap_fee is the ratio that is charged on the amount of token in.
  string swap_fee = 10 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"swap_fee\"",
    (gogoproto.nullable) = false
  ];

  // last_liquidity_update is the last time either the pool liquidity or the
  // active tick changed
  google.protobuf.Timestamp last_liquidity_update = 11 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"last_liquidity_update\""
  ];

  repeated IncentiveRecord pool_incentives = 12 [
    (gogoproto.moretags) = "yaml:\"pool_incentives\"",
    (gogoproto.nullable) = false
  ];
}

// IncentiveRecord represents an active perpetual incentive gauge for a pool
message IncentiveRecord {
  // min uptime for incentive record, will loop through and compare against
  // supported uptimes
  string incentive_denom = 1;

  // remaining_amount is the total amount of incentives to be distributed
  string remaining_amount = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"remaining_amount\"",
    (gogoproto.nullable) = false
  ];

  // emission_rate is the incentive emission rate per second
  string emission_rate = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"swap_fee\"",
    (gogoproto.nullable) = false
  ];

  // start_time is the time when the incentive starts distributing
  google.protobuf.Timestamp start_time = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"start_time\""
  ];

  // min_uptime is the minimum uptime required for liquidity to qualify for this
  // incentive. It should be always be one of the supported uptimes in
  // types.SupportedUptimes
  google.protobuf.Timestamp min_uptime = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"min_uptime\""
  ];
}