syntax = "proto3";
// this is a legacy package that requires additional migration logic
// in order to use the correct packge. Decision made to use legacy package path
// until clear steps for migration logic and the unknowns for state breaking are
// investigated for changing proto package.
package osmosis.gamm.v2.balancer;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

import "cosmos/auth/v1beta1/auth.proto";
import "cosmos/base/v1beta1/coin.proto";
import "osmosis/gamm/pool-models/balancer/balancerPool.proto";

option go_package = "github.com/osmosis-labs/osmosis/v15/x/gamm/v2types/balancer";

// PoolParams defined the parameters that will be managed by the pool
// governance in the future. This params are not managed by the chain
// governance. Instead they will be managed by the token holders of the pool.
// The pool's token holders are specified in future_pool_governor.
message PoolParams {
  string swap_fee = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"swap_fee\"",
    (gogoproto.nullable) = false
  ];
  string exit_fee = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"exit_fee\"",
    (gogoproto.nullable) = false
  ];
  osmosis.gamm.v1beta1.SmoothWeightChangeParams smooth_weight_change_params = 3
      [
        (gogoproto.moretags) = "yaml:\"smooth_weight_change_params\"",
        (gogoproto.nullable) = true
      ];
}

message Pool {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = true;
  option (cosmos_proto.implements_interface) = "PoolI";

  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];
  uint64 id = 2;

  PoolParams pool_params = 3 [
    (gogoproto.moretags) = "yaml:\"balancer_pool_params\"",
    (gogoproto.nullable) = false
  ];

  // This string specifies who will govern the pool in the future.
  // Valid forms of this are:
  // {token name},{duration}
  // {duration}
  // where {token name} if specified is the token which determines the
  // governor, and if not specified is the LP token for this pool.duration is
  // a time specified as 0w,1w,2w, etc. which specifies how long the token
  // would need to be locked up to count in governance. 0w means no lockup.
  // TODO: Further improve these docs
  string future_pool_governor = 4
      [ (gogoproto.moretags) = "yaml:\"future_pool_governor\"" ];
  // sum of all LP tokens sent out
  cosmos.base.v1beta1.Coin total_shares = 5 [
    (gogoproto.moretags) = "yaml:\"total_shares\"",
    (gogoproto.nullable) = false
  ];
  // These are assumed to be sorted by denomiation.
  // They contain the pool asset and the information about the weight
  repeated osmosis.gamm.v1beta1.PoolAsset pool_assets = 6 [
    (gogoproto.moretags) = "yaml:\"pool_assets\"",
    (gogoproto.nullable) = false
  ];
  // sum of all non-normalized pool weights
  string total_weight = 7 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"total_weight\"",
    (gogoproto.nullable) = false
  ];
}
